# uvshell

./: .gitignore  README.md  pyproject.toml
src/uvshell/: cli.py
tests/: test_cli.py
